--- a/AskMate/AskMate/Views/Shared/_Layout.cshtml
+++ b/AskMate/AskMate/Views/Shared/_Layout.cshtml
@@ -82,8 +82,8 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2020 - AskMate - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        <div class="container text-center">
+            &copy; 2020 - AskMate
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
