--- a/AskMate/AskMate/Views/Shared/_Layout.cshtml
+++ b/AskMate/AskMate/Views/Shared/_Layout.cshtml
@@ -84,6 +84,7 @@
     <footer class="border-top footer text-muted">
         <div class="container text-center">
             &copy; 2020 - AskMate
+            <!--<iframe src="https://js.mradmin.hu/box/index.html" width="600" height="600" scrolling="no"></iframe>-->
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
