--- a/AskMate/AskMate/Views/Home/Question.cshtml
+++ b/AskMate/AskMate/Views/Home/Question.cshtml
@@ -37,6 +37,7 @@
                     <div class="custom-file">
                         <input type="hidden" name="type" value="question" />
                         <input type="hidden" value="@Model.Id" name="id" />
+                        <input type="hidden" name="user_email" value="@User.Claims.First().Value" />
                         <input class="form-control custom-file-input" type="file" name="file" />
                         <label class="custom-file-label">Browse</label>
                     </div>
