--- a/AskMate/AskMate/Views/Home/Question.cshtml
+++ b/AskMate/AskMate/Views/Home/Question.cshtml
@@ -133,8 +133,8 @@
             }
         }
     </li>
-
 </ul>
+
 <ul class="list-group">
     <li class="list-group-item">
         <form method="post" asp-controller="Home" asp-action="ImageUpload" enctype="multipart/form-data">
@@ -149,8 +149,25 @@
             <input name="id" type="hidden" value="@Model.Id" />
             <input type="submit" class="btn btn-success" value="Add Answer">
         </form>
-</li>
+    </li>
 </ul>
+
+<ul class="list-group">
+    <li class="list-group-item">
+        <form method="POST" asp-controller="Home" asp-action="AddComment" enctype="multipart/form-data">
+            <div class="justify-content-between pt-4">
+                <p>Add a comment</p>
+                <textarea class="form-control-plaintext bg-light text-black-50" style="border-radius: 1rem;" name="comment" required></textarea>
+                <input name="id" type="hidden" value="@Model.Id" />
+                <input name="type" type="hidden" value="question" />
+                <div class="pt-2 float-right">
+                    <button class="btn btn-success" type="submit">Add Comment</button>
+                </div>
+            </div>
+        </form>
+    </li>
+</ul>
+
 <button class="btn btn-info" onclick="window.location.href='/Home'">Back to questions</button>
 <script type="text/javascript">
     $(document).ready(function () {
