--- a/AskMate/AskMate/Views/Account/Register.cshtml
+++ b/AskMate/AskMate/Views/Account/Register.cshtml
@@ -7,32 +7,41 @@
 <form method="post" asp-controller="Account" asp-action="Register">
     <div asp-validation-summary="ModelOnly"></div>
 
-    <div>
+    <div class="form-group">
         <label asp-for="Username"></label>
-        <input asp-for="Username" />
+        <input class="form-control" asp-for="Username" placeholder="Enter Username"/>
         <span asp-validation-for="Username"></span>
     </div>
 
-    <div>
+    <div class="form-group">
         <label asp-for="Email"></label>
-        <input asp-for="Email" />
+        <input asp-for="Email" type="email" class="form-control" placeholder="Enter your email">
         <span asp-validation-for="Email"></span>
     </div>
 
-    <div>
+    <div class="form-group">
         <label asp-for="Password"></label>
-        <input asp-for="Password" />
+        <input asp-for="Password" class="form-control" placeholder="Password" />
         <span asp-validation-for="Password"></span>
     </div>
 
-    <div>
+    <div class="form-group">
         <label asp-for="ConfirmPassword"></label>
-        <input asp-for="ConfirmPassword" />
+        <input asp-for="ConfirmPassword" class="form-control" placeholder="Confirm Password" />
         <span asp-validation-for="ConfirmPassword"></span>
     </div>
-
     <div>
-        <input type="submit" value="Register" />
+        @if (Model != null && Model.errors.Count > 0)
+        {
+            foreach (string error in Model.errors)
+            {
+                <p class="alert alert-danger">@error</p>
+            }
+        }
+
+    </div>
+    <div>
+        <input type="submit" value="Register" class="btn btn-primary"/>
     </div>
 
 </form>
