--- a/AskMate/AskMate/Views/Account/RegSuccess.cshtml
+++ b/AskMate/AskMate/Views/Account/RegSuccess.cshtml
@@ -14,12 +14,12 @@
     <META HTTP-EQUIV="refresh" CONTENT="4;URL=../">
 </head>
 <body>
-    <h1>Registration Successful!</h1>
+    <!--<h1>Registration Successful!</h1>-->
 </body>
 </html>
 
 <!--Loading script-ish xddd -->
-@*<script type="text/javascript">
+<script type="text/javascript">
     let angle = 0;
     let w = 40;
     let mangle;
@@ -68,4 +68,4 @@
 
     }
 
-</script>*@
+</script>
