--- a/AskMate/AskMate/Views/Home/Question.cshtml
+++ b/AskMate/AskMate/Views/Home/Question.cshtml
@@ -14,7 +14,8 @@
     <li class="list-group-item list-group-item-info d-flex justify-content-between align-items-center">
         <h3>#@Model.Id - @Model.Title</h3>
         <a>@Model.GetDate()</a>
-        
+        @if (!authorized) { }
+        else { 
         <div>
             <button id="downVote" class="btn bg-transparent btn-vote text-danger" onclick="location.href='@Url.Action("DownVote", "Home", new {id = @Model.Id})'" title="Downvote">
                 <span class="oi oi-chevron-bottom downvote"></span>
@@ -24,6 +25,7 @@
                 <span class="oi oi-chevron-top upvote"></span>
             </button>
         </div>
+        }
     </li>
     <li class="list-group-item">
         <div class="float-left">
