--- a/AskMate/AskMate/Views/Account/Login.cshtml
+++ b/AskMate/AskMate/Views/Account/Login.cshtml
@@ -3,31 +3,57 @@
     ViewData["Title"] = "Login";
 }
 
+<style type="text/css">
+    .login-form {
+        width: 340px;
+        margin: 50px auto;
+    }
 
-<div class="text-center">
-        <h1 class="display-4">Login</h1>
-        <form method="post">
-            <div class="form-group">
-                <label>E-mail</label>
-                <input class="form-control" type="email" name="email" />
-            </div>
-
-            <div class="form-group">
-                <label>Password</label>
-                <input class="form-control" type="password" name="password" />
-            </div>
-            <button class="btn btn-success">Login</button>
-        </form>
-    </div>
-
-
-<div>
-        @if (Model != null && Model.Error.Count > 0)
-        {
-            foreach (string error in Model.Error)
-            {
-                <p class="alert alert-danger">@error</p>
-            }
+        .login-form form {
+            margin-bottom: 15px;
+            background: #f7f7f7;
+            box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+            padding: 30px;
         }
 
-    </div>
+        .login-form h2 {
+            margin: 0 0 15px;
+        }
+
+    .form-control, .btn {
+        min-height: 38px;
+        border-radius: 2px;
+    }
+
+    .btn {
+        font-size: 15px;
+        font-weight: bold;
+    }
+</style>
+
+<div class="login-form">
+    <form method="post">
+        <h2 class="text-center">Member Log In</h2>
+        <div class="form-group">
+            <input type="email" name="email" class="form-control" placeholder="E-mail" required="required">
+        </div>
+        <div class="form-group">
+            <input type="password" name="password" class="form-control" placeholder="Password" required="required">
+        </div>
+        <div class="form-group">
+            <button type="submit" class="btn btn-primary btn-block">Log in</button>
+        </div>
+    </form>
+    <p class="text-center"><a href="Register">Create an Account</a></p>
+</div>
+
+<div>
+    @if (Model != null && Model.Error.Count > 0)
+    {
+        foreach (string error in Model.Error)
+        {
+            <p class="alert alert-danger">@error</p>
+        }
+    }
+
+</div>
