--- a/AskMate/AskMate/Views/Account/Register.cshtml
+++ b/AskMate/AskMate/Views/Account/Register.cshtml
@@ -2,46 +2,67 @@
 @{
     ViewBag.Title = "Register";
 }
-<h1>Register</h1>
+<style type="text/css">
+    .login-form {
+        width: 340px;
+        margin: 50px auto;
+    }
 
-<form method="post" asp-controller="Account" asp-action="Register">
-    <div asp-validation-summary="ModelOnly"></div>
-
-    <div class="form-group">
-        <label asp-for="Username"></label>
-        <input class="form-control" asp-for="Username" placeholder="Enter Username"/>
-        <span asp-validation-for="Username"></span>
-    </div>
-
-    <div class="form-group">
-        <label asp-for="Email"></label>
-        <input asp-for="Email" type="email" class="form-control" placeholder="Enter your email">
-        <span asp-validation-for="Email"></span>
-    </div>
-
-    <div class="form-group">
-        <label asp-for="Password"></label>
-        <input asp-for="Password" class="form-control" placeholder="Password" />
-        <span asp-validation-for="Password"></span>
-    </div>
-
-    <div class="form-group">
-        <label asp-for="ConfirmPassword"></label>
-        <input asp-for="ConfirmPassword" class="form-control" placeholder="Confirm Password" />
-        <span asp-validation-for="ConfirmPassword"></span>
-    </div>
-    <div>
-        @if (Model != null && Model.errors.Count > 0)
-        {
-            foreach (string error in Model.errors)
-            {
-                <p class="alert alert-danger">@error</p>
-            }
+        .login-form form {
+            margin-bottom: 15px;
+            background: #f7f7f7;
+            box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+            padding: 30px;
         }
 
-    </div>
-    <div>
-        <input type="submit" value="Register" class="btn btn-primary"/>
-    </div>
+        .login-form h2 {
+            margin: 0 0 15px;
+        }
 
-</form>
+    .form-control, .btn {
+        min-height: 38px;
+        border-radius: 2px;
+    }
+
+    .btn {
+        font-size: 15px;
+        font-weight: bold;
+    }
+</style>
+
+<div class="login-form">
+    <form method="post" asp-controller="Account" asp-action="Register">
+        <div asp-validation-summary="ModelOnly"></div>
+        <h2 class="text-center">Register</h2>
+        <div class="form-group">
+            <input asp-for="Username" class="form-control" placeholder="Username" required="required">
+            <span asp-validation-for="Username"></span>
+        </div>
+        <div class="form-group">
+            <input asp-for="Email" type="email" class="form-control" placeholder="E-mail" required="required">
+            <span asp-validation-for="Email"></span>
+        </div>
+        <div class="form-group">
+            <input asp-for="Password" type="password" class="form-control" placeholder="Password" required="required">
+            <span asp-validation-for="Password"></span>
+        </div>
+        <div class="form-group">
+            <input asp-for="ConfirmPassword" type="password" class="form-control" placeholder="Confirm password" required="required">
+            <span asp-validation-for="ConfirmPassword"></span>
+        </div>
+        <div class="form-group">
+            <button type="submit" class="btn btn-primary btn-block">Register</button>
+        </div>
+    </form>
+</div>
+
+<div>
+    @if (Model != null && Model.errors.Count > 0)
+    {
+        foreach (string error in Model.errors)
+        {
+            <p class="alert alert-danger">@error</p>
+        }
+    }
+
+</div>
