--- a/AskMate/AskMate/Views/Account/RegSuccess.cshtml
+++ b/AskMate/AskMate/Views/Account/RegSuccess.cshtml
@@ -8,18 +8,15 @@
 <html>
 <head>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <META HTTP-EQUIV="refresh" CONTENT="4;URL=../">
+    <META HTTP-EQUIV="refresh" CONTENT="3;URL=../">
 </head>
 <body>
-    <!--<h1>Registration Successful!</h1>-->
+    <h1>Registration Successful!</h1>
 </body>
 </html>
 
 <!--Loading script-ish xddd -->
-<script type="text/javascript">
+@*<script type="text/javascript">
     let angle = 0;
     let w = 40;
     let mangle;
@@ -68,4 +65,4 @@
 
     }
 
-</script>
+</script>*@
