--- a/AskMate/AskMate/Views/Home/Question.cshtml
+++ b/AskMate/AskMate/Views/Home/Question.cshtml
@@ -133,8 +133,8 @@
                             
                             @if (authorized && Idao.GetUserById(Model.User_Id).Equals(Idao.GetUserByEmail(eMail)))
                             {
-                                @Html.ActionLink("Edit", "edit_answer", new { id = answer.Id })
-                                @Html.ActionLink("Delete", "delete", new { id = answer.Id }, new { @class = "text-danger" })
+                                    @Html.ActionLink("Edit", "edit_answer", new { id = answer.Id }, new { @class = "p-2" })
+                                    @Html.ActionLink("Delete", "delete", new { id = answer.Id }, new { @class = "text-danger p-2" })
                             }
                             <!----
                             <a asp-controller="Home" asp-action="DeleteAnswer" href="#" class="text-danger">Delete</a>
