--- a/AskMate/AskMate/Views/Home/Index.cshtml
+++ b/AskMate/AskMate/Views/Home/Index.cshtml
@@ -87,7 +87,7 @@
                 @Html.DisplayFor(modelItem => question.Id)
             </td>
 
-            <td>
+            <td class="text-center">
                 @if(question.tagNames.Count > 0)
                 {
                     foreach(string name in question.tagNames)
